--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ noop_method_call = "warn"
 pointer_structural_match = "warn"
 semicolon_in_expressions_from_macros = "warn"
 # NOT_ACCURATE: single_use_lifetimes = "warn"
-trivial_casts = "warn"
+trivial_casts = "allow"
 trivial_numeric_casts = "warn"
 unreachable_pub = "warn"
 # unsafe_code: = "warn"
