--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ windows-sys = { version = "0.52", features = [
     "Win32_System",
     "Win32_System_Diagnostics",
     "Win32_System_Diagnostics_Debug",
+    "Win32_System_Registry",
 ] }
 libc = "0.2"
 
